examples/type_system/failing/13_effect_pure_calls_io.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/13_effect_pure_calls_io.flx
// error[E400]: Missing Ambient Effect
//
// Call to `print` requires effect `Console` in this function signature.
//
//   examples/type_system/failing/13_effect_pure_calls_io.flx:28:5
//    |
// 28 |     print(x)
//    |     ^^^^^^^^
//    |     -------- effectful call occurs here
//
// Hint:
//   Add `with Console` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: annotated-pure function calls an IO effect.
//
// `compute` has a return-type annotation (`-> Int`) but no `with IO`.
// It is treated as explicitly pure. Calling `print` inside its body
// violates that guarantee.

fn compute(x: Int) -> Int {
    print(x)
    x * 2
}

compute(5)
